scss/_infomodule.scss
info-module {
  height: 100%;
  width: 100%;
  display: block;
  align-items: center;
  justify-content: center;
  .button {
    height: 100%;
    width: 100%;
    margin: 0;
    border: 0;
    &.button-full {
      margin-top: 0;
    }
    &.chapel-credits {
      background-color: $gordon-blue;
    }
    &.meal-points {
      background-color: $meal-points-orange;
    }
    &.meal-points-per-day {
      background-color: $meal-points-per-day;
    }
    &.days-left-in-semester {
      background-color: $days-left-in-semester;
    }
  }
  .icon {
    height: 30vh;
    width: 100%;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    &:before {
      color: $text-color;
    }
    &.chapel-icon {
      background-image: url('../img/chapel.svg');
    }
    &.meal-points-icon {
      background-image: url('../img/silverware.svg');
    }
    &.calculator-icon {
      background-image: url('../img/calculator.svg');
    }
    &.calendar-icon {
      background-image: url('../img/calendar.svg');
    }
  }
  .column {
    float: left;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .info-number {
    font-size: 20vh;
  }
  .info-label {
    margin-top: 15px;
  }
  &.one-half {
    height: 50%;
    .icon {
      height: 25vh;
    }
    .info-number {
      font-size: 15vh;
    }
  }
  &.one-third {
    height: 33%;
    .icon {
      margin-top: 10px;
      height: 14vh;
    }
    .info-label {
      font-size: 4.75vh;
    }
    .info-number {
      font-size: 10vh;
    }
    .info-error-message {
      font-size: 5.5vh;
    }
  }
  &.one-fourth {
    height: 25%;
    .icon {
      height: 13vh;
    }
  }
  &.list-item {
    height: 20%;
    .icon {
      height: 11vh;
    }
  }
  &.one-fourth,
  &.list-item {
    .module-left {
      width: 40%;
      padding-left: 10px;
      text-align: left;
    }
    .module-right {
      width: 60%;
      vertical-align: middle;
    }
    .module-content,
    .column,
    .module-right {
      height: 100%;
    }
    .info-number {
      margin-top: 10px;
      font-size: 6vh;
    }
    .info-label {
      margin: 0;
      font-size: 4vh;
    }
    .info-error-message {
      font-size: 4.5vh;
    }
  }
}

